--- a/test/basic_example.html
+++ b/test/basic_example.html
@@ -40,6 +40,19 @@
                   </div>
                 </form>
 
+                <p>Try the following queries:
+                  <pre>
+'first name' ilike Mark
+'first name' like r
+'first name' like Mark or number = 3
+number = 3
+number == 3
+not number == 3
+not 'first name' ilike mark
+not ('first name' ilike mark or number = 2)
+                  </pre>
+                </p>
+
                 <table class="table" id="table">
                   <thead>
                     <tr>
