Minify the grammar file.

--- a/test/basic_example.html
+++ b/test/basic_example.html
@@ -673,7 +673,7 @@ not ('first name' ilike mark or number = 2)
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.2.1/lodash.min.js"></script>
-        <script src="../src/grammar.js"></script>
+        <script src="../src/grammar.min.js"></script>
         <script src="../src/tablequery.js"></script>
     </body>
 </html>
