--- a/test/basic_example.html
+++ b/test/basic_example.html
@@ -12,7 +12,7 @@
 
         <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/2.1.0/normalize.css">
         <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
+        <link href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" rel="stylesheet">
 
         <style>
             body {
@@ -24,12 +24,13 @@
             }
         </style>
 
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.2.1/lodash.min.js"></script>
 
         <script src="../src/grammar.min.js"></script>
-        <script src="../src/tablequery.js"></script>
+        <script src="../src/tablequery.min.js"></script>
         <script type="text/javascript">
           $(document).ready(function() {
             tablequery.set_table("#table");
@@ -49,7 +50,7 @@
                 <form class="form-search">
                   <div class="control-group" id="table_search_text_control_group">
                     <div class="controls">
-                      <input class="input-block-level" type="text" placeholder="Specify filter here..." id="table_search_text">
+                      <input class="input-block-level" type="text" placeholder="Specify filter here..." id="table_search_text" autocomplete="off">
                     </div>
                   </div>
                 </form>
