Play around with only showing and hiding rows if they're visible.

--- a/test/basic_example.html
+++ b/test/basic_example.html
@@ -30,6 +30,7 @@
         <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.2.1/lodash.min.js"></script>
 
         <script src="../src/grammar.min.js"></script>
+        <script src="../src/hashmap.js"></script>
         <script src="../src/tablequery.js"></script>
         <script type="text/javascript">
           $(document).ready(function() {
