Use CSS selector to hide rather than JQuery.

--- a/test/basic_example.html
+++ b/test/basic_example.html
@@ -22,6 +22,7 @@
                 margin-top: 1em;
                 font-family: monospace;
             }
+            .hidden { display: none; }
         </style>
 
         <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.6.2/modernizr.min.js"></script>
