build - use Grunt to build everything.
- Dependencies are included inside a closure.

--- a/test/basic_example.html
+++ b/test/basic_example.html
@@ -27,10 +27,8 @@
 
         <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
-        <script src="http://cdnjs.cloudflare.com/ajax/libs/lodash.js/1.3.1/lodash.min.js"></script>
 
-        <script src="../src/grammar.min.js"></script>
-        <script src="../src/tablequery.js"></script>
+        <script src="../build/tablequery.min.js"></script>
         <script type="text/javascript">
           $(document).ready(function() {
             tablequery.set_table("#table");
