--- a/test/grammar/tests.html
+++ b/test/grammar/tests.html
@@ -9,7 +9,7 @@
   <div id="qunit"></div>
   <div id="qunit-fixture"></div>
   <script src="../../bower_components/qunit/qunit/qunit.js"></script>
-  <script src="../../src/grammar.js"></script>
+  <script src="../../build/grammar.js"></script>
   <script src="tests.js"></script>
 </body>
 </html>
