--- a/test/example_basic.html
+++ b/test/example_basic.html
@@ -44,7 +44,7 @@
         <div class="container">
             <div class="row">
               <div class="span8 offset2">
-                <input class="input-block-level" type="text" placeholder="Specify filter here..." id="table_search_text" autocomplete="off">
+                <input class="input-block-level" type="text" placeholder="Specify filter here..." id="table_search_text">
                 <p>Try the following queries:
                   <pre>
 'first name' ilike Mark
