test - add integration tests
Integration tests using CasperJS (and PhantomJS) is now working on
Travis CI.

Also included is a regression-tested bug fix where OR'd statements never
worked.

Other handy notes:

- Screenshots from failing CasperJS tests will get uploaded to my AWS S3
  account. This was invaluable in tracking down a failure in the Grunt
  build pipeline that was upsetting Travis.
- A minified, compiled version of the library is uploaded to my AWS S3
  account if the build is successful.

--- a/test/example_basic.html
+++ b/test/example_basic.html
@@ -25,7 +25,7 @@
             .hidden { display: none; }
         </style>
 
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script src="../build/tablequery.min.js"></script>
         <script type="text/javascript">
