--- a/test/tablequery-core/index.html
+++ b/test/tablequery-core/index.html
@@ -25,7 +25,7 @@
             .hidden { display: none; }
         </style>
 
-        <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.10.3/jquery-ui.min.js"></script>
         <script src="../../build/tablequery.min.js"></script>
         <script type="text/javascript">
