--- a/test/tablequery-core/index.html
+++ b/test/tablequery-core/index.html
@@ -16,6 +16,9 @@
           $(document).ready(function() {
             tablequery.set_table("#table");
             tablequery.set_table_search_text("#table_search_text");
+            tablequery._now = function() {
+              return moment("2013-08-01 13:00:00");
+            }
           });
         </script>
 
@@ -29,29 +32,37 @@
                   <thead>
                     <tr>
                       <th>Number</th>
+                      <th>Date</th>
                       <th>First Name</th>
                       <th>Last Name</th>
                       <th>Username</th>
+                      <th>Duration</th>
                     </tr>
                   </thead>
                   <tbody>
                     <tr>
                       <td>1</td>
+                      <td>2013-08-01 12:00:00</td>
                       <td>Mark</td>
                       <td>Otto</td>
                       <td>@mdo</td>
+                      <td>00:00:01</td>
                     </tr>
                     <tr>
                       <td>2</td>
+                      <td>2013-07-31 12:00:00</td>
                       <td>Jacob</td>
                       <td>Thornton</td>
                       <td>@fat</td>
+                      <td>00:00:03</td>
                     </tr>
                     <tr>
                       <td>3</td>
+                      <td>2013-07-30 12:00:00</td>
                       <td>Larry</td>
                       <td>the Bird</td>
                       <td>@twitter</td>
+                      <td>00:01:05</td>
                     </tr>
                   </tbody>
                 </table>
