Build/lodash - upgrade packages, fix build, fix lodash leakage
No tests for lodash leakage, and I'm noticing some test failures for
GT/LT operators, so more tests for those needed too.

--- a/test/index.html
+++ b/test/index.html
@@ -8816,7 +8816,7 @@
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
 <script src="http://cdn.jsdelivr.net/sorttable/2/sorttable.js"></script>
-<script src="../build/tablequery.min.js"></script>
+<script src="../build/tablequery.js"></script>
 <script>
   $(document).ready(function() {
     $("#details").css("height", $(window).height());
