--- a/test/tablequery-core/index.html
+++ b/test/tablequery-core/index.html
@@ -11,7 +11,7 @@
         <meta name="viewport" content="width=device-width">
 
         <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
-        <script src="../../build/tablequery.min.js"></script>
+        <script src="../../build/tablequery.js"></script>
         <script type="text/javascript">
           $(document).ready(function() {
             tablequery.set_table("#table");
